--- a/trab4bim/src/main/webapp/WEB-INF/web.xml
+++ b/trab4bim/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-		 xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
-		 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" 
-		 id="WebApp_ID" 
-		 version="3.1">
-		 
-   
- <welcome-file-list>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
+  <welcome-file-list>
     <welcome-file>index.xhtml</welcome-file>
   </welcome-file-list>
- 
   <context-param>
     <param-name>facelets.SKIP_COMMENTS</param-name>
     <param-value>true</param-value>
@@ -19,18 +12,14 @@
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
+  <listener>
+    <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
+  </listener>
   <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.xhtml</url-pattern>
   </servlet-mapping>
- 
-  <!-- WELD -->
-  <listener>
-    <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
-  </listener>
- 
   <session-config>
-      <session-timeout>30</session-timeout>
+    <session-timeout>30</session-timeout>
   </session-config>
- 
 </web-app>
