--- a/trab4bim/pom.xml
+++ b/trab4bim/pom.xml
@@ -8,86 +8,103 @@
   <name>trab4bim Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-  	  <!-- JSF -->
-    <dependency>
-	<groupId>com.sun.faces</groupId>
-	<artifactId>jsf-api</artifactId>
-	<version>2.2.13</version>
-    </dependency>
- 
-	<!-- JSF -->
-    <dependency>
-	<groupId>com.sun.faces</groupId>
-	<artifactId>jsf-impl</artifactId>
-	<version>2.2.13</version>
-    </dependency>
- 
-    <!-- PrimeFaces -->
-    <dependency>
-	<groupId>org.primefaces</groupId>
-	<artifactId>primefaces</artifactId>
-	<version>5.3</version>
-    </dependency>
- 
-    <!-- CDI -->
-    <dependency>
-  	<groupId>javax.enterprise</groupId>
-  	<artifactId>cdi-api</artifactId>
-  	<version>1.2</version>
-  	<scope>provided</scope>
-    </dependency>
- 
-    <!--JBoss/Weld implementação de referência do CDI 
-    	para Servlet Container(Exemplo:Tomcat)  -->
-    <dependency>  
-  	<groupId>org.jboss.weld.servlet</groupId>
-  	<artifactId>weld-servlet</artifactId>
-  	<version>2.2.6.Final</version>
-  	<scope>runtime</scope>
-    </dependency>
- 
-    <!-- Métodos uteis para manipulação de String, métodos e etc-->
-    <dependency>
-  	<groupId>org.apache.commons</groupId>
-  	<artifactId>commons-lang3</artifactId>
-  	<version>3.4</version>
-    </dependency>
- 
-    <!-- PROVIDER JPA(HIBERNATE) -->
-    <dependency>
-	<groupId>org.hibernate</groupId>
-	<artifactId>hibernate-entitymanager</artifactId>
-	<version>4.3.0.Final</version>
-    </dependency>
- 
-    <!-- DEPENDENCIA MYSQL -->
-    <dependency>
-	<groupId>mysql</groupId>
-	<artifactId>mysql-connector-java</artifactId>
-	<version>5.1.37</version>
-    </dependency>
- 
-    <!-- usado pelo Weld  -->
-    <dependency>
-	<groupId>org.jboss</groupId>
-	<artifactId>jandex</artifactId>
-	<version>1.2.2.Final</version>
-    </dependency>
- 
-    <!-- Manipulação de XML -->
-    <dependency>
-	<groupId>jdom</groupId>
-	<artifactId>jdom</artifactId>
-	<version>1.1</version>
-    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-    
+
+
+    <!-- JSF -->
+    <dependency>
+      <groupId>com.sun.faces</groupId>
+      <artifactId>jsf-api</artifactId>
+      <version>2.2.13</version>
+    </dependency>
+
+    <!-- JSF -->
+    <dependency>
+      <groupId>com.sun.faces</groupId>
+      <artifactId>jsf-impl</artifactId>
+      <version>2.2.13</version>
+    </dependency>
+
+    <!-- PrimeFaces -->
+    <dependency>
+      <groupId>org.primefaces</groupId>
+      <artifactId>primefaces</artifactId>
+      <version>5.3</version>
+    </dependency>
+
+    <!-- CDI -->
+    <dependency>
+      <groupId>javax.enterprise</groupId>
+      <artifactId>cdi-api</artifactId>
+      <version>1.2</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <!--JBoss/Weld implementação de referência do CDI
+    	para Servlet Container(Exemplo:Tomcat)  -->
+    <dependency>
+      <groupId>org.jboss.weld.servlet</groupId>
+      <artifactId>weld-servlet</artifactId>
+      <version>2.2.6.Final</version>
+      <scope>runtime</scope>
+    </dependency>
+
+    <!-- Métodos uteis para manipulação de String, métodos e etc-->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.4</version>
+    </dependency>
+
+    <!-- PROVIDER JPA(HIBERNATE) -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>4.3.0.Final</version>
+    </dependency>
+
+    <!-- DEPENDENCIA MYSQL -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.37</version>
+    </dependency>
+
+    <!-- usado pelo Weld  -->
+    <dependency>
+      <groupId>org.jboss</groupId>
+      <artifactId>jandex</artifactId>
+      <version>1.2.2.Final</version>
+    </dependency>
+
+    <!-- Manipulação de XML -->
+    <dependency>
+      <groupId>jdom</groupId>
+      <artifactId>jdom</artifactId>
+      <version>1.1</version>
+    </dependency>
+
+      <!-- https://mvnrepository.com/artifact/javax.persistence/persistence-api -->
+      <dependency>
+          <groupId>javax.persistence</groupId>
+          <artifactId>persistence-api</artifactId>
+          <version>1.0.2</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>javax.servlet-api</artifactId>
+          <version>3.1.0</version>
+      </dependency>
+
   </dependencies>
+
   <build>
     <finalName>trab4bim</finalName>
     <plugins>
